--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     // See also https://aka.ms/tsconfig/module
     "module": "commonjs",
     "target": "esnext",
+    "resolveJsonModule": true,
     // For nodejs:
     //"lib": ["esnext"],
     "types": ["node"],
@@ -32,7 +33,7 @@
     // "noUnusedParameters": true,
     // "noFallthroughCasesInSwitch": true,
     // "noPropertyAccessFromIndexSignature": true,
-
+    
     // Recommended Options
     "strict": true,
     "jsx": "react-jsx",
