--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^17.2.1",
     "env-var": "^7.5.0",
     "express": "^5.1.0",
-    "firebase-admin": "^13.4.0"
+    "firebase-admin": "^13.4.0",
+    "ics-to-json": "^2.0.2"
   }
 }
