Setted for calling google calendar

--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "dayjs": "^1.11.17",
     "dotenv": "^17.2.1",
     "env-var": "^7.5.0",
     "express": "^5.1.0",
     "firebase-admin": "^13.4.0",
-    "ics-to-json": "^2.0.2"
+    "ical2json": "^4.1.0"
   }
 }
