--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# custom json
+serviceAccountKey.json
+auth2Credential.json
+token.json
+
 # Logs
 logs
 *.log
@@ -8,7 +13,6 @@ lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-serviceAccountKey.json
 # Runtime data
 pids
 *.pid
